add third verst, php(mvc)

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html>
 <head>
-    <title>Strata by HTML5 UP</title>
+    <title>Сидоров Денис</title>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <!--[if lte IE 8]>
@@ -77,24 +77,52 @@
     <!-- Two -->
     <section id="two">
         <h3>Примеры моих проектов, не могу вылаживать все, так как иногда забываю, работодатель против или нет
-            времени.</h3>
+            времени.
+        </h3>
         <div class="row">
+
+
             <article class="6u 12u$(xsmall) work-item">
                 <a href="images/fulls/1.jpg" class="image fit thumb"><img src="images/thumbs/1.jpg" alt=""/></a>
                 <h3><p>HTML5, CSS3-<span class="colorAttantion">LESS</span>, Responsive Layouts, Parallax, JQuery, мобильная версия. <a
-                        class="iconListLink" href="https://github.com/DenysSidorov/secondEcommerc">GitHub</a></p></h3>
-                <p>Верстка сайта "Wapik"</p>
+                        class="iconListLink" href="https://github.com/DenysSidorov/secondEcommerc">GitHub</a> <a
+                        class="iconListLink" href="http://denis-sidorov.zzz.com.ua/projects/secondProjectEcomercGreen/index.html">&nbsp;&nbsp;Просмотр</a></p>
+                Верстка сайта "Wapik" 4стр.</h3>
             </article>
+
             <article class="6u$ 12u$(xsmall) work-item">
                 <a href="images/fulls/22.jpg" class="image fit thumb"><img src="images/thumbs/22.jpg" alt=""/></a>
-                <h3><p><span class="colorAttantion">AngularJS</span>, LodashJS, CSS3, HTML5. <a class="iconListLink" href="https://github.com/DenysSidorov/AngularJS_Items">GitHub</a></p>
-                    Web-приложение, реализуещее ежедневник</h3>
+                <h3><p><span class="colorAttantion">AngularJS 1.x</span>, LodashJS, CSS3, HTML5. <a class="iconListLink" href="https://github.com/DenysSidorov/AngularJS_Items">GitHub</a><a
+                        class="iconListLink" href="http://denis-sidorov.zzz.com.ua/projects/angular_ejednev/index.html">&nbsp;&nbsp;Просмотр</a></p>
+                    Web-приложение, реализуещее ежедневник на AngularJS 1.x</h3>
                 </article>
+
             <article class="6u 12u$(xsmall) work-item">
-                <a href="images/fulls/03.jpg" class="image fit thumb"><img src="images/thumbs/03.jpg" alt=""/></a>
-                <h3>Tortor metus commodo</h3>
-                <p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+                <a href="images/fulls/mvc.jpg" class="image fit thumb"><img src="images/thumbs/mvc.jpg" alt=""/></a>
+                <h3><p><span class="colorAttantion">PHP(MVC) + MySQL&nbsp;&nbsp;</span> <a
+                        class="iconListLink" href="https://github.com/DenysSidorov/mvc.les">GitHub</a> </p>
+                    Собственная реализация MVC шаблона PHP + MySQL</h3>
             </article>
+
+
+            <article class="6u$ 12u$(xsmall) work-item">
+                <a href="images/fulls/camo.jpg" class="image fit thumb"><img src="images/thumbs/camo.jpg" alt=""/></a>
+                <h3><p><span class="colorAttantion">LESS &nbsp;</span>JQuery, AJAX,HTML5, CSS3 &nbsp;<a class="iconListLink" href="https://github.com/DenysSidorov/forthEcommercAjaxMenu">GitHub</a><a
+                        class="iconListLink" href="http://denis-sidorov.zzz.com.ua/projects/verstCamoOldDesign_T/index.html">&nbsp;&nbsp;Просмотр</a></p>
+                    Верстка сайта "Old News Press"</h3>
+            </article>
+
+
+            <article class="6u 12u$(xsmall) work-item">
+                <a href="images/fulls/third.jpg" class="image fit thumb"><img src="images/thumbs/third.jpg" alt=""/></a>
+                <h3><p>HTML5, JQuery, CSS3- <span class="colorAttantion"> LESS</span><a
+                        class="iconListLink" href="https://github.com/DenysSidorov/verstThirdPointSlider"> &nbsp;GitHub</a> <a
+                        class="iconListLink" href="http://denis-sidorov.zzz.com.ua/projects/vesrtThirdBlack/index.html">&nbsp;&nbsp;Просмотр</a></p></h3>
+                <h3>Верстка сайта "Sevent" в темных цветах</h3>
+            </article>
+
+
+
             <article class="6u$ 12u$(xsmall) work-item">
                 <a href="images/fulls/04.jpg" class="image fit thumb"><img src="images/thumbs/04.jpg" alt=""/></a>
                 <h3>Quam neque phasellus</h3>
