--- a/index.html
+++ b/index.html
@@ -58,14 +58,14 @@
         <p class="pMain	">Front:</p>
 
         <ul class="mainList">
-            <li>JavaScript - AngularJS 1.x, ECMAScript 6, JQLite, AJAX</li>
+            <li>JavaScript - AngularJS 1.x, ECMAScript 6, AJAX</li>
             <li>Верстка( HTML5, CSS3/LESS/SASS, Responsive Layouts, Parallax, JQuery)</li>
         </ul>
 
         <p class="pMain2">Back:</p>
         <ul class="mainList">
-            <li>NodeJS (NPM, Express, Templates)</li>
-            <li>Java(OOP,JDBC,JSP, Servlets, SpringMVC, Hibenate)</li>
+            <li>PHP, NodeJS (NPM, Express, Templates)</li>
+            <li>Java(OOP,JDBC,JSP, Servlets, SpringMVC)</li>
             <li>MySQL, MongoDB</li>
         </ul>
 
@@ -76,8 +76,7 @@
 
     <!-- Two -->
     <section id="two">
-        <h3>Примеры моих проектов, не могу вылаживать все, так как иногда забываю, работодатель против или нет
-            времени.
+        <h3>Некоторые из моих домашних проектов.
         </h3>
         <div class="row">
 
@@ -90,6 +89,9 @@
                 Верстка сайта "Wapik" 4стр.</h3>
             </article>
 
+
+
+
             <article class="6u$ 12u$(xsmall) work-item">
                 <a href="images/fulls/22.jpg" class="image fit thumb"><img src="images/thumbs/22.jpg" alt=""/></a>
                 <h3><p><span class="colorAttantion">AngularJS 1.x</span>, LodashJS, CSS3, HTML5. <a class="iconListLink" href="https://github.com/DenysSidorov/AngularJS_Items">GitHub</a><a
@@ -97,20 +99,22 @@
                     Web-приложение, реализуещее ежедневник на AngularJS 1.x</h3>
                 </article>
 
-            <article class="6u 12u$(xsmall) work-item">
-                <a href="images/fulls/mvc.jpg" class="image fit thumb"><img src="images/thumbs/mvc.jpg" alt=""/></a>
-                <h3><p><span class="colorAttantion">PHP(MVC) + MySQL&nbsp;&nbsp;</span> <a
-                        class="iconListLink" href="https://github.com/DenysSidorov/mvc.les">GitHub</a> </p>
-                    Собственная реализация MVC шаблона PHP + MySQL</h3>
-            </article>
 
+            <article class="6u 12u$(xsmall) work-item">
+                <a href="images/fulls/shop.jpg" class="image fit thumb"><img src="images/thumbs/shop.jpg" alt=""/></a>
+                <h3><p><span class="colorAttantion">PHP(MVC) + MySQL&nbsp;&nbsp;</span> <a
+                        class="iconListLink" href="https://github.com/DenysSidorov/shop.les"> &nbsp;GitHub</a> <a
+                        class="iconListLink" href="http://php-mvc-shop.zzz.com.ua/">&nbsp;&nbsp;Просмотр</a></p></h3>
+                <h3>Онлайн магазин и админка на основе своей реализации паттерна MVC</h3>
+            </article>
 
             <article class="6u$ 12u$(xsmall) work-item">
-                <a href="images/fulls/camo.jpg" class="image fit thumb"><img src="images/thumbs/camo.jpg" alt=""/></a>
-                <h3><p><span class="colorAttantion">LESS &nbsp;</span>JQuery, AJAX,HTML5, CSS3 &nbsp;<a class="iconListLink" href="https://github.com/DenysSidorov/forthEcommercAjaxMenu">GitHub</a><a
-                        class="iconListLink" href="http://denis-sidorov.zzz.com.ua/projects/verstCamoOldDesign_T/index.html">&nbsp;&nbsp;Просмотр</a></p>
-                    Верстка сайта "Old News Press"</h3>
-            </article>
+            <a href="images/fulls/camo.jpg" class="image fit thumb"><img src="images/thumbs/camo.jpg" alt=""/></a>
+            <h3><p><span class="colorAttantion">LESS &nbsp;</span>JQuery, AJAX,HTML5, CSS3 &nbsp;<a class="iconListLink" href="https://github.com/DenysSidorov/forthEcommercAjaxMenu">GitHub</a><a
+                    class="iconListLink" href="http://denis-sidorov.zzz.com.ua/projects/verstCamoOldDesign_T/index.html">&nbsp;&nbsp;Просмотр</a></p>
+                Верстка сайта "Old News Press"</h3>
+        </article>
+
 
 
             <article class="6u 12u$(xsmall) work-item">
@@ -121,50 +125,77 @@
                 <h3>Верстка сайта "Sevent" в темных цветах</h3>
             </article>
 
+            <article class="6u$ 12u$(xsmall) work-item">
+                <a href="images/fulls/angularMail.jpg" class="image fit thumb"><img src="images/fulls/angularMail.jpg" alt=""/></a>
+                <h3><p>HTML, CSS <span class="colorAttantion">AngularJS</span><a
+                        class="iconListLink" href="https://github.com/DenysSidorov/AngularJS_mail_app"> &nbsp&nbsp;GitHub</a> </p></h3>
+                <h3>Интерфейс почтового сервиса на Angular, routes, edit contact, view message</h3>
+            </article>
+
+            <article class="6u 12u$(xsmall) work-item">
+                <a href="images/fulls/mvc.jpg" class="image fit thumb"><img src="images/thumbs/mvc.jpg" alt=""/></a>
+                <h3><p><span class="colorAttantion">PHP(MVC) + MySQL&nbsp;&nbsp;</span> <a
+                        class="iconListLink" href="https://github.com/DenysSidorov/mvc.les">GitHub</a> </p>
+                    Собственная реализация MVC шаблона PHP + MySQL (Блог)</h3>
+            </article>
 
 
-            <article class="6u$ 12u$(xsmall) work-item">
-                <a href="images/fulls/04.jpg" class="image fit thumb"><img src="images/thumbs/04.jpg" alt=""/></a>
-                <h3>Quam neque phasellus</h3>
-                <p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-            </article>
             <article class="6u 12u$(xsmall) work-item">
-                <a href="images/fulls/05.jpg" class="image fit thumb"><img src="images/thumbs/05.jpg" alt=""/></a>
-                <h3>Nunc enim commodo aliquet</h3>
-                <p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+                <a href="images/fulls/weather.jpg" class="image fit thumb"><img src="images/thumbs/weather.jpg" alt=""/></a>
+                <h3><p>HTML5, CSS3- <span class="colorAttantion">AngualrJS</span><a
+                        class="iconListLink" href="https://github.com/DenysSidorov/AngularJS_weather"> &nbsp;GitHub</a> <a
+                        class="iconListLink" href="http://php-mvc-shop.zzz.com.ua/weather/">&nbsp;&nbsp;Просмотр</a></p></h3>
+                <h3>Работа с API сервиса о погоде</h3>
             </article>
-            <article class="6u$ 12u$(xsmall) work-item">
-                <a href="images/fulls/22.jpg" class="image fit thumb"><img src="images/thumbs/22.jpg" alt=""/></a>
-                <h3><p><span class="colorAttantion">AngularJS</span>, LodashJS, CSS3, HTML5. <a class="iconListLink" href="https://github.com/DenysSidorov/AngularJS_Items">GitHub</a></p>
-                    Web-приложение, реализуещее ежедневник</h3>
-            </article>
+
             <article class="6u 12u$(xsmall) work-item">
-                <a href="images/fulls/1.jpg" class="image fit thumb"><img src="images/thumbs/1.jpg" alt=""/></a>
-                <h3><p>HTML5, CSS3-<span class="colorAttantion">LESS</span>, Responsive Layouts, Parallax, JQuery, мобильная версия. <a
-                        class="iconListLink" href="https://github.com/DenysSidorov/secondEcommerc">GitHub</a></p></h3>
-                <p>Верстка сайта "Wapik"</p>
+            <a href="images/thumbs/valid.jpg" class="image fit thumb"><img src="images/thumbs/valid.jpg" alt=""/></a>
+            <h3><p>HTML5, CSS3- <span class="colorAttantion">AngualrJS</span><a
+                    class="iconListLink" href="https://github.com/DenysSidorov/AngularJS_ValidForm"> &nbsp;GitHub</a> <a
+                    class="iconListLink" href="http://php-mvc-shop.zzz.com.ua/validAng/">&nbsp;&nbsp;Просмотр</a></p></h3>
+            <h3>Валидация формы на AngularJS</h3>
+        </article>
+
+            <!--////////////////////////////////////////////////////-->
+
+            <article class="6u 12u$(xsmall) work-item">
+            <a href="images/fulls/NodeBlog.jpg" class="image fit thumb"><img src="images/fulls/NodeBlog.jpg" alt=""/></a>
+            <h3><p>HTML5, CSS3 <span class="colorAttantion">NodeJS (Express)</span><a
+                    class="iconListLink" href="https://github.com/DenysSidorov/NodeJS_Blog"> &nbsp;GitHub</a> </p></h3>
+            <h3>Портфолио дизайнеров с их работами на NodeJS </h3>
+        </article>
+
+            <article class="6u 12u$(xsmall) work-item">
+                <a href="images/fulls/petClinic.png" class="image fit thumb"><img src="images/fulls/petClinic.png" alt=""/></a>
+                <h3><p>OOP, Servlets<span class="colorAttantion">Java</span><a
+                        class="iconListLink" href="https://github.com/DenysSidorov/clinicPetWeb"> &nbsp&nbsp;GitHub</a> </p></h3>
+                <h3>Реализация CRUD оперций на JAVA-сервлетах </h3>
             </article>
-            <article class="6u$ 12u$(xsmall) work-item">
-                <a href="images/fulls/06.jpg" class="image fit thumb"><img src="images/thumbs/06.jpg" alt=""/></a>
-                <h3>Risus ornare lacinia</h3>
-                <p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-            </article>
-            <article class="6u$ 12u$(xsmall) work-item">
-                <a href="images/fulls/22.jpg" class="image fit thumb"><img src="images/thumbs/22.jpg" alt=""/></a>
-                <h3><p><span class="colorAttantion">AngularJS</span>, LodashJS, CSS3, HTML5. <a class="iconListLink" href="https://github.com/DenysSidorov/AngularJS_Items">GitHub</a></p>
-                    Web-приложение, реализуещее ежедневник</h3>
-            </article>
+
+
+            <!--////////////////////////////////////////////////////-->
+
+
+
+
+
+
+
+
+
+
+
         </div>
         <ul class="actions">
-            <li><a href="#" class="button">Full Portfolio</a></li>
+            <li><a  class="button">Full Portfolio</a></li>
         </ul>
     </section>
 
     <!-- Three -->
     <section id="three">
-        <h2>Get In Touch</h2>
-        <p>Accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem
-            semper nunc nisi lorem vulputate lorem neque lorem ipsum dolor.</p>
+        <!--<h2>Get In Touch</h2>-->
+        <!--<p>Accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem-->
+            <!--semper nunc nisi lorem vulputate lorem neque lorem ipsum dolor.</p>-->
         <!--<div class="row">-->
         <!--<div class="8u 12u$(small)">-->
         <!--<form method="post" action="#">-->
