add node logo and 4 lessons

--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 
 <html>
 <head>
-    <title>Сидоров Денис</title>
+    <title>Сидоров Денис Web-программист</title>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <meta name="keywords" content="Сидоров Денис, Денис Сидоров, web, программист, резюме, Denis Sidorov">
+    <meta name="description" content="Мои некоторые домашние проекты">
     <!--[if lte IE 8]>
     <script src="assets/js/ie/html5shiv.js"></script><![endif]-->
 
@@ -18,11 +20,11 @@
 <!-- Header -->
 <header id="header">
     <!--<div class="inner">-->
-        <!--<a href="#" class="image avatar"><img src="images/avatar.jpg" alt=""/></a>-->
-        <!--<span><strong>Привет! Это я.</strong></span>-->
-            <!--<h1 class="pMainName spanName"> Сидоров Денис</h1>-->
-        <!--<br/> - Web Developer,<br/>-->
-        <!--<span>идущий в ногу со временем.</span>-->
+    <!--<a href="#" class="image avatar"><img src="images/avatar.jpg" alt=""/></a>-->
+    <!--<span><strong>Привет! Это я.</strong></span>-->
+    <!--<h1 class="pMainName spanName"> Сидоров Денис</h1>-->
+    <!--<br/> - Web Developer,<br/>-->
+    <!--<span>идущий в ногу со временем.</span>-->
     <!--</div>-->
     <div class="inner">
         <a href="#" class="image avatar"><img src="images/avatar.jpg" alt=""/></a>
@@ -33,14 +35,18 @@
     </div>
     <div class="inner">
         <ul class="icons">
-            <li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-            <li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
-            <li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
-            <li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+            <!--<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>-->
+            <li><a target="_blank" href="https://github.com/DenysSidorov" class="icon fa-github"><span class="label">Github</span></a></li>
+            <!--<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>-->
+            <li><a href="mailto:000scorpions000@gmail.com" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+            <li><a target="_blank" href="https://vk.com/id254150909" class="icon fa fa-vk"><span class="label">VK</span></a></li>
+            <li><a  href="tel:0936877613" class="icon fa fa-phone"><span class="label">Phone</span></a></li>
         </ul>
+        <p class="">093-687-76-13</p>
+        <p class="">000scorpions000@gmail.com</p>
         <!--<ul class="copyright">-->
-            <!--<li>&copy; Untitled</li>-->
-            <!--<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>-->
+        <!--<li>&copy; Untitled</li>-->
+        <!--<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>-->
         <!--</ul>-->
     </div>
 </header>
@@ -58,13 +64,14 @@
         <p class="pMain	">Front:</p>
 
         <ul class="mainList">
-            <li>JavaScript - AngularJS 1.x, ECMAScript 6, AJAX</li>
+            <li>JavaScript - AngularJS, ECMAScript 6, TypeScript, AJAX </li>
             <li>Верстка( HTML5, CSS3/LESS/SASS, Responsive Layouts, Parallax, JQuery)</li>
         </ul>
 
         <p class="pMain2">Back:</p>
         <ul class="mainList">
-            <li>PHP, NodeJS (NPM, Express, Templates)</li>
+            <li>PHP (basic)</li>
+            <li> NodeJS (NPM, Express, Templates)</li>
             <li>Java(OOP,JDBC,JSP, Servlets, SpringMVC)</li>
             <li>MySQL, MongoDB</li>
         </ul>
@@ -86,7 +93,7 @@
                 <h3><p>HTML5, CSS3-<span class="colorAttantion">LESS</span>, Responsive Layouts, Parallax, JQuery, мобильная версия. <a
                         class="iconListLink" href="https://github.com/DenysSidorov/secondEcommerc">GitHub</a> <a
                         class="iconListLink" href="http://denis-sidorov.zzz.com.ua/projects/secondProjectEcomercGreen/index.html">&nbsp;&nbsp;Просмотр</a></p>
-                Верстка сайта "Wapik" 4стр.</h3>
+                    Верстка сайта "Wapik" 4стр.</h3>
             </article>
 
 
@@ -97,7 +104,7 @@
                 <h3><p><span class="colorAttantion">AngularJS 1.x</span>, LodashJS, CSS3, HTML5. <a class="iconListLink" href="https://github.com/DenysSidorov/AngularJS_Items">GitHub</a><a
                         class="iconListLink" href="http://denis-sidorov.zzz.com.ua/projects/angular_ejednev/index.html">&nbsp;&nbsp;Просмотр</a></p>
                     Web-приложение, реализуещее ежедневник на AngularJS 1.x</h3>
-                </article>
+            </article>
 
 
             <article class="6u 12u$(xsmall) work-item">
@@ -109,11 +116,11 @@
             </article>
 
             <article class="6u$ 12u$(xsmall) work-item">
-            <a href="images/fulls/camo.jpg" class="image fit thumb"><img src="images/thumbs/camo.jpg" alt=""/></a>
-            <h3><p><span class="colorAttantion">LESS &nbsp;</span>JQuery, AJAX,HTML5, CSS3 &nbsp;<a class="iconListLink" href="https://github.com/DenysSidorov/forthEcommercAjaxMenu">GitHub</a><a
-                    class="iconListLink" href="http://denis-sidorov.zzz.com.ua/projects/verstCamoOldDesign_T/index.html">&nbsp;&nbsp;Просмотр</a></p>
-                Верстка сайта "Old News Press"</h3>
-        </article>
+                <a href="images/fulls/camo.jpg" class="image fit thumb"><img src="images/thumbs/camo.jpg" alt=""/></a>
+                <h3><p><span class="colorAttantion">LESS &nbsp;</span>JQuery, AJAX,HTML5, CSS3 &nbsp;<a class="iconListLink" href="https://github.com/DenysSidorov/forthEcommercAjaxMenu">GitHub</a><a
+                        class="iconListLink" href="http://denis-sidorov.zzz.com.ua/projects/verstCamoOldDesign_T/index.html">&nbsp;&nbsp;Просмотр</a></p>
+                    Верстка сайта "Old News Press"</h3>
+            </article>
 
 
 
@@ -149,21 +156,21 @@
             </article>
 
             <article class="6u 12u$(xsmall) work-item">
-            <a href="images/thumbs/valid.jpg" class="image fit thumb"><img src="images/thumbs/valid.jpg" alt=""/></a>
-            <h3><p>HTML5, CSS3- <span class="colorAttantion">AngualrJS</span><a
-                    class="iconListLink" href="https://github.com/DenysSidorov/AngularJS_ValidForm"> &nbsp;GitHub</a> <a
-                    class="iconListLink" href="http://php-mvc-shop.zzz.com.ua/validAng/">&nbsp;&nbsp;Просмотр</a></p></h3>
-            <h3>Валидация формы на AngularJS</h3>
-        </article>
+                <a href="images/thumbs/valid.jpg" class="image fit thumb"><img src="images/thumbs/valid.jpg" alt=""/></a>
+                <h3><p>HTML5, CSS3- <span class="colorAttantion">AngualrJS</span><a
+                        class="iconListLink" href="https://github.com/DenysSidorov/AngularJS_ValidForm"> &nbsp;GitHub</a> <a
+                        class="iconListLink" href="http://php-mvc-shop.zzz.com.ua/validAng/">&nbsp;&nbsp;Просмотр</a></p></h3>
+                <h3>Валидация формы на AngularJS</h3>
+            </article>
 
             <!--////////////////////////////////////////////////////-->
 
             <article class="6u 12u$(xsmall) work-item">
-            <a href="images/fulls/NodeBlog.jpg" class="image fit thumb"><img src="images/fulls/NodeBlog.jpg" alt=""/></a>
-            <h3><p>HTML5, CSS3 <span class="colorAttantion">NodeJS (Express)</span><a
-                    class="iconListLink" href="https://github.com/DenysSidorov/NodeJS_Blog"> &nbsp;GitHub</a> </p></h3>
-            <h3>Портфолио дизайнеров с их работами на NodeJS </h3>
-        </article>
+                <a href="images/fulls/NodeBlog.jpg" class="image fit thumb"><img src="images/fulls/NodeBlog.jpg" alt=""/></a>
+                <h3><p>HTML5, CSS3 <span class="colorAttantion">NodeJS (Express)</span><a
+                        class="iconListLink" href="https://github.com/DenysSidorov/NodeJS_Blog"> &nbsp;GitHub</a> </p></h3>
+                <h3>Портфолио дизайнеров с их работами на NodeJS </h3>
+            </article>
 
             <article class="6u 12u$(xsmall) work-item">
                 <a href="images/fulls/petClinic.png" class="image fit thumb"><img src="images/fulls/petClinic.png" alt=""/></a>
@@ -172,6 +179,35 @@
                 <h3>Реализация CRUD оперций на JAVA-сервлетах </h3>
             </article>
 
+            <article class="6u 12u$(xsmall) work-item">
+                <a href="images/nodejs-logo.png" class="image fit thumb"><img src="images/nodejs-logo.png" alt=""/></a>
+                <h3><p><span class="colorAttantion">NodeJS (sendmailer)</span><a
+                        class="iconListLink" href="https://github.com/DenysSidorov/NodeJS_sendMail_l31"> &nbsp&nbsp;GitHub</a> </p></h3>
+                <h3>Программа отправляющая mail-почту на указанные адреса.</h3>
+            </article>
+
+
+
+            <article class="6u 12u$(xsmall) work-item">
+            <a href="images/nodejs-logo.png" class="image fit thumb"><img src="images/nodejs-logo.png" alt=""/></a>
+            <h3><p><span class="colorAttantion">NodeJS (request)</span><a
+                    class="iconListLink" href="https://github.com/DenysSidorov/NodeJS_translater_l32/blob/master/main.js"> &nbsp&nbsp;GitHub</a> </p></h3>
+            <h3>Программа-переводчик использующая API Яндекса.</h3>
+        </article>
+
+            <article class="6u 12u$(xsmall) work-item">
+                <a href="images/nodejs-logo.png" class="image fit thumb"><img src="images/nodejs-logo.png" alt=""/></a>
+                <h3><p><span class="colorAttantion">NodeJS (fs)</span><a
+                        class="iconListLink" href="https://github.com/DenysSidorov/NodeJS_l2_game_log"> &nbsp&nbsp;GitHub</a> </p></h3>
+                <h3>Консольная игра, работающая по принципу угадывания числа, записью в файл. Плюс вторая программа читающая лог и выводящиая статистику по игре.</h3>
+            </article>
+
+            <article class="6u 12u$(xsmall) work-item">
+                <a href="images/nodejs-logo.png" class="image fit thumb"><img src="images/nodejs-logo.png" alt=""/></a>
+                <h3><p><span class="colorAttantion">Express, Jade, Cookie, CSS, NodeJS(express)</span><a
+                        class="iconListLink" href="https://github.com/DenysSidorov/NodeJS_parse-site_Express_l4"> &nbsp&nbsp;GitHub</a> </p></h3>
+                <h3>Парсинг одного из выбранных сайтов в удобном виде</h3>
+            </article>
 
             <!--////////////////////////////////////////////////////-->
 
@@ -186,16 +222,16 @@
 
 
         </div>
-        <ul class="actions">
-            <li><a  class="button">Full Portfolio</a></li>
-        </ul>
+        <!--<ul class="actions">-->
+            <!--<li><a  class="button">Full Portfolio</a></li>-->
+        <!--</ul>-->
     </section>
 
     <!-- Three -->
     <section id="three">
         <!--<h2>Get In Touch</h2>-->
         <!--<p>Accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem-->
-            <!--semper nunc nisi lorem vulputate lorem neque lorem ipsum dolor.</p>-->
+        <!--semper nunc nisi lorem vulputate lorem neque lorem ipsum dolor.</p>-->
         <!--<div class="row">-->
         <!--<div class="8u 12u$(small)">-->
         <!--<form method="post" action="#">-->
@@ -555,16 +591,16 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 <!-- Footer -->
 <footer id="footer">
     <!--<div class="inner">-->
-        <!--<ul class="icons">-->
-            <!--<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>-->
-            <!--<li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>-->
-            <!--<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>-->
-            <!--<li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li>-->
-        <!--</ul>-->
-        <!--<ul class="copyright">-->
-            <!--<li>&copy; Untitled</li>-->
-            <!--<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>-->
-        <!--</ul>-->
+    <!--<ul class="icons">-->
+    <!--<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>-->
+    <!--<li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>-->
+    <!--<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>-->
+    <!--<li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li>-->
+    <!--</ul>-->
+    <!--<ul class="copyright">-->
+    <!--<li>&copy; Untitled</li>-->
+    <!--<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>-->
+    <!--</ul>-->
     <!--</div>-->
 </footer>
 
